src/objects/Scores__x.object
<CustomObject>
    <description>Scores</description>
    <externalDataSource>ERP</externalDataSource>
    <externalName>Scores</externalName>
    <label>Scores</label>
    <pluralLabel>Scores</pluralLabel>
    <fields>
        <fullName>Attribute__c</fullName>
        <description>Attribute</description>
        <externalDeveloperName>Attribute</externalDeveloperName>
        <label>Attribute</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Candidate__c</fullName>
        <description>Candidate</description>
        <externalDeveloperName>Candidate</externalDeveloperName>
        <label>Candidate</label>
        <length>255</length>
        <referenceTargetField>Referral__c.Candidate_ID__c</referenceTargetField>
        <referenceTo>Referral__c</referenceTo>
        <relationshipLabel>Scores</relationshipLabel>
        <relationshipName>Scores1</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>Id__c</fullName>
        <description>Id</description>
        <externalDeveloperName>Id</externalDeveloperName>
        <label>Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <description>Score</description>
        <externalDeveloperName>Score</externalDeveloperName>
        <label>Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>